--- a/templates/default/zf2-apache2.conf.erb
+++ b/templates/default/zf2-apache2.conf.erb
@@ -1,6 +1,7 @@
 <VirtualHost *:80>
   ServerName <%= @params[:server_name] %>
-  ServerAlias <% @params[:server_aliases].each do |alias| %><%= alias %> <% end %>
+  ServerAlias <% @params[:server_aliases].each do |a| %><%= "#{a}" %> <% end %>
+
   DocumentRoot <%= @params[:docroot] %>
   RewriteEngine On
   
